# MyBrewFolio-Sync

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  sonar-project.properties  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
scripts/: package-msix.ps1
src/: main.jsx  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: binary.rs  cloud.rs  engine.rs  lib.rs  local.rs  main.rs  model.rs  store.rs
tests/: fake-gaggimate.mjs  verify-fake-gaggimate.mjs
tests/fixtures/: library.json
windows/: Package.appxmanifest.xml
